# rust-trending-discord

./: Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
src/: config.rs  discord.rs  lib.rs  main.rs  repo.rs  storage.rs
