[package]
name = "rust-trending-discord"
version = "0.1.0"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
edition = "2018"

[dependencies]
redis = "0.9.1"
configc = { version = "0.9.1", package = "config" }
failure = "0.1.3"
serde = "1.0.81"
serde_derive = "1.0.81"
serde_json = "1.0.33"
chrono = "0.4.6"
hyper = "0.12.17"
hyper-tls = "0.3.1"
tokio = "0.1.13"
openssl-probe = "0.1.2"
futures = "0.1"
